--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
   <app-root></app-root>
-  <a href="https://api.whatsapp.com/send/?phone=573164987035&text=Hola%2C%20estoy%20interesado%20de%20en%20sus%20servicios.&app_absent=0" class="whatsapp-icon" target="_blank">
+  <a href="https://api.whatsapp.com/send/?phone=573157384040&text=Hola%2C%20estoy%20interesado%20de%20en%20un%20curso%20de%20acordeon.&app_absent=0" class="whatsapp-icon" target="_blank">
     <img src="assets/social.png" alt="WhatsApp">
   </a>
 </body>
